--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Author URL: http://w3layouts.com
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="healthbot.html">healthbot</a>
+							<a class="nav-link" href="helthbot.html">helthbot</a>
 						</li>
 					</ul>
 					<!--/search-right-->
